force-app/main/default/objects/ProjectServiceTarget__c/ProjectServiceTarget__c.object-meta.xml
<CustomObject>
    <description>Relates a Target to a Project Service. Targets are manually added when building a Project. Project Service Target related to Project Service, Target, and Account.</description>
    <label>Project Service Target</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Target</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>