force-app/main/default/objects/ProjectServiceTarget__c/fields/CeatedByExternalSource__c.field-meta.xml
<CustomField>
    <fullName>CeatedByExternalSource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ceated By External Source</label>
    <type>Checkbox</type>
</CustomField>