force-app/main/default/objects/ProjectServiceTarget__c/fields/customdesc__c.field-meta.xml
<CustomField>
    <fullName>customdesc__c</fullName>
    <label>customdesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>