force-app/main/default/objects/ProjectServiceTarget__c/fields/IsDonated__c.field-meta.xml
<CustomField>
    <fullName>IsDonated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Donated</label>
    <type>Checkbox</type>
</CustomField>