force-app/main/default/objects/ProjectServiceTarget__c/fields/NotForResale__c.field-meta.xml
<CustomField>
    <fullName>NotForResale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not For Resale</label>
    <type>Checkbox</type>
</CustomField>