force-app/main/default/objects/ProjectServiceTarget__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Service Target</relationshipLabel>
    <relationshipName>Project_Service_Target</relationshipName>
    <type>Lookup</type>
</CustomField>