force-app/main/default/objects/ProjectServiceTarget__c/fields/ProjectAccount__c.field-meta.xml
<CustomField>
    <fullName>ProjectAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ProjectAccount__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ProjectAccount__c</referenceTo>
    <relationshipLabel>Project Service Target</relationshipLabel>
    <relationshipName>Project_Service_Target</relationshipName>
    <type>Lookup</type>
</CustomField>