force-app/main/default/objects/ProjectServiceTarget__c/fields/ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>ProjectNumber__c</fullName>
    <formula>ProjectService__r.ProjectNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>