force-app/main/default/objects/ProjectServiceTarget__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Project Service Target</relationshipLabel>
    <relationshipName>ProjectServiceTargets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>