force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetAcquired__c.field-meta.xml
<CustomField>
    <fullName>TargetAcquired__c</fullName>
    <label>TargetAcquired</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchased</fullName>
            </value>
            <value>
                <fullName>Donated</fullName>
            </value>
            <value>
                <fullName>In Kit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>