force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetBrand__c.field-meta.xml
<CustomField>
    <fullName>TargetBrand__c</fullName>
    <formula>Target__r.BrandInfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Brand</label>
    <type>Text</type>
</CustomField>