force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetCategory__c.field-meta.xml
<CustomField>
    <fullName>TargetCategory__c</fullName>
    <formula>Target__r.CategoryInfo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Category</label>
    <type>Text</type>
</CustomField>