force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetDepartment__c.field-meta.xml
<CustomField>
    <fullName>TargetDepartment__c</fullName>
    <formula>Target__r.DepartmentName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Department</label>
    <type>Text</type>
</CustomField>