force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetDescription__c.field-meta.xml
<CustomField>
    <fullName>TargetDescription__c</fullName>
    <formula>Target__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Description</label>
    <type>Text</type>
</CustomField>