force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <formula>Target__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Name</label>
    <type>Text</type>
</CustomField>