force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetPLU__c.field-meta.xml
<CustomField>
    <fullName>TargetPLU__c</fullName>
    <formula>Target__r.PLU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target PLU</label>
    <type>Text</type>
</CustomField>