force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetStockCode__c.field-meta.xml
<CustomField>
    <fullName>TargetStockCode__c</fullName>
    <formula>Target__r.StockCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Stock Code</label>
    <type>Text</type>
</CustomField>