force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetUPC__c.field-meta.xml
<CustomField>
    <fullName>TargetUPC__c</fullName>
    <formula>Target__r.UPC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target UPC</label>
    <type>Text</type>
</CustomField>