force-app/main/default/objects/ProjectServiceTarget__c/fields/TargetVendorNumber__c.field-meta.xml
<CustomField>
    <fullName>TargetVendorNumber__c</fullName>
    <formula>Target__r.VendorNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Vendor Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>