force-app/main/default/objects/ProjectServiceTarget__c/fields/TotalPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice__c</fullName>
    <formula>Price__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>