force-app/main/default/objects/ProjectServiceTarget__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Ingredients</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>