force-app/main/default/objects/ProjectServiceTarget__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey &amp; Reporting</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>