force-app/main/default/objects/ProjectServiceTarget__c/fields/YieldPerUnit__c.field-meta.xml
<CustomField>
    <fullName>YieldPerUnit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Yield Per Unit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>