force-app/main/default/objects/ProjectServiceTarget__c/validationRules/validateTargetType.validationRule-meta.xml
<ValidationRule>
    <fullName>validateTargetType</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISNEW(),ProjectService__r.NumberOfTargets__c &gt; 0,   ProjectService__r.TargetType__c !=  Target__r.RecordType.Name)</errorConditionFormula>
    <errorMessage>Target Types do not match.</errorMessage>
</ValidationRule>